fix sculpture height collapse

--- a/src/main.css
+++ b/src/main.css
@@ -505,6 +505,7 @@ footer p {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  height: 50rem;
 }
 .carousel * {
   transition: all 0.33s ease-in-out;
@@ -569,13 +570,14 @@ footer p {
   flex-direction: row;
   justify-content: space-between;
   align-self: center;
-  width: 40%;
+  width: 60%;
 }
 .carousel .carousel-dots div {
-  width: 1rem;
-  height: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
   border-radius: 50%;
   background-color: var(--medium-purple);
+  cursor: pointer;
 }
 .carousel .carousel-dots div.carousel-dots-active {
   background-color: var(--light-purple);
