--- a/src/scss/layout/_carousel.scss
+++ b/src/scss/layout/_carousel.scss
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  height: 50rem;
+
   * {
     transition: all 0.33s ease-in-out;
   }
@@ -66,12 +68,13 @@
     flex-direction: row;
     justify-content: space-between;
     align-self: center;
-    width: 40%;
+    width: 60%;
     div {
-      width: 1rem;
-      height: 1rem;
+      width: 1.5rem;
+      height: 1.5rem;
       border-radius: 50%;
       background-color: var(--medium-purple);
+      cursor: pointer;
       &.carousel-dots-active {
         background-color: var(--light-purple);
         scale: 1.33;
